--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,22 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".elbow"
+            android:name=".elbow5"
             android:exported="false" />
         <activity
-            android:name=".elboweach"
+            android:name=".elbow4"
+            android:exported="false" />
+        <activity
+            android:name=".elbow3"
+            android:exported="false" />
+        <activity
+            android:name=".elbow2"
+            android:exported="false" />
+        <activity
+            android:name=".elbow1"
+            android:exported="false" />
+        <activity
+            android:name=".elbow"
             android:exported="false" />
         <activity
             android:name=".wrist"
@@ -53,5 +65,6 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 </manifest>
